[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/Damage.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/SheetMaker.gd" type="Script" id=3]
[ext_resource path="res://Assets/Icons/ReturnIcon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_esc"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="SheetMaker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -464.0
margin_top = -246.0
margin_right = 464.0
margin_bottom = 246.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 200.0
margin_bottom = 492.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 200.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "Nome"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 200.0
margin_bottom = 61.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Joe Doe"

[node name="Label9" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 200.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit9" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 200.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "Força"
align = 1
valign = 1

[node name="LineEdit2" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 200.0
margin_bottom = 162.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "0"

[node name="Label3" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 200.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 1 )
text = "Velocidade/Agilidade"
align = 1
valign = 1

[node name="LineEdit3" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 200.0
margin_bottom = 215.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "0"

[node name="Label4" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 200.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "Inteligência"
align = 1
valign = 1

[node name="LineEdit4" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 200.0
margin_bottom = 268.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "0"

[node name="Label5" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 200.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 1 )
text = "Sabedoria"
align = 1
valign = 1

[node name="LineEdit5" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 291.0
margin_right = 200.0
margin_bottom = 321.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "0"

[node name="Label6" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 200.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 1 )
text = "Carisma"
align = 1
valign = 1

[node name="LineEdit6" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 200.0
margin_bottom = 374.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "0"

[node name="Label7" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 200.0
margin_bottom = 393.0
custom_fonts/font = SubResource( 1 )
text = "Vitalidade"
align = 1
valign = 1

[node name="LineEdit7" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 397.0
margin_right = 200.0
margin_bottom = 427.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "0"

[node name="Label8" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 431.0
margin_right = 200.0
margin_bottom = 446.0
custom_fonts/font = SubResource( 1 )
text = "Sanidade"
align = 1
valign = 1

[node name="LineEdit8" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 200.0
margin_bottom = 480.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "0"

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer"]
margin_left = 250.0
margin_right = 737.0
margin_bottom = 492.0
custom_constants/hseparation = 11
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_right = 272.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Armas Brancas"
align = 1

[node name="CheckBox2" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_right = 487.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -293.796, 285.048 )
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Armas Curtas"
align = 1

[node name="CheckBox3" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 31.0
margin_right = 272.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Armas Médias"
align = 1

[node name="CheckBox4" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 31.0
margin_right = 487.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Armas Longas"
align = 1

[node name="CheckBox5" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 62.0
margin_right = 272.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Armas Pesadas"
align = 1

[node name="CheckBox6" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 62.0
margin_right = 487.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Arrombamentos"
align = 1

[node name="CheckBox7" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 93.0
margin_right = 272.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Artes Marciais"
align = 1

[node name="CheckBox8" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 93.0
margin_right = 487.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Atenção/Notar"
align = 1

[node name="CheckBox9" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 124.0
margin_right = 272.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Briga"
align = 1

[node name="CheckBox10" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 124.0
margin_right = 487.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Credibilidade"
align = 1

[node name="CheckBox11" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 155.0
margin_right = 272.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Cuidados Pessoais"
align = 1

[node name="CheckBox12" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 155.0
margin_right = 487.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Disfarce"
align = 1

[node name="CheckBox13" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 186.0
margin_right = 272.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Educação e Cultura Geral"
align = 1

[node name="CheckBox14" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 186.0
margin_right = 487.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Esconder/Evadir"
align = 1

[node name="CheckBox15" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 217.0
margin_right = 272.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Esquivar/Escapar"
align = 1

[node name="CheckBox16" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 217.0
margin_right = 487.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Falsificação"
align = 1

[node name="CheckBox17" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 248.0
margin_right = 272.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Furtividade"
align = 1

[node name="CheckBox18" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 248.0
margin_right = 487.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Interrogatório"
align = 1

[node name="CheckBox19" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 279.0
margin_right = 272.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Intimidação"
align = 1

[node name="CheckBox20" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 279.0
margin_right = 487.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Liderança"
align = 1

[node name="CheckBox21" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 310.0
margin_right = 272.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Medicamentos"
align = 1

[node name="CheckBox22" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 310.0
margin_right = 487.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Medicina"
align = 1

[node name="CheckBox23" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 341.0
margin_right = 272.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Negociar"
align = 1

[node name="CheckBox24" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 341.0
margin_right = 487.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Percepção"
align = 1

[node name="CheckBox25" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 372.0
margin_right = 272.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Persuasão e Lábia"
align = 1

[node name="CheckBox26" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 372.0
margin_right = 487.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Primeiros Socorros"
align = 1

[node name="CheckBox27" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 403.0
margin_right = 272.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Resistencia Tortura/Drogas"
align = 1

[node name="CheckBox28" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 403.0
margin_right = 487.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Resistência"
align = 1

[node name="CheckBox29" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 434.0
margin_right = 272.0
margin_bottom = 461.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Sedução"
align = 1

[node name="CheckBox30" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_left = 283.0
margin_top = 434.0
margin_right = 487.0
margin_bottom = 461.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Sobrevivência"
align = 1

[node name="CheckBox31" type="CheckBox" parent="Panel/HBoxContainer/GridContainer"]
margin_top = 465.0
margin_right = 272.0
margin_bottom = 492.0
custom_fonts/font = SubResource( 2 )
custom_constants/hseparation = 21
text = "Rastreamento"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 787.0
margin_right = 928.0
margin_bottom = 492.0
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 160.0
margin_right = 141.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 2 )
text = "Pontos disponiveis"
align = 1

[node name="Label2" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 192.0
margin_right = 141.0
margin_bottom = 220.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="Label3" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 224.0
margin_right = 141.0
margin_bottom = 252.0
custom_fonts/font = ExtResource( 2 )
text = "Pericias disponiveis"
align = 1

[node name="Label4" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 256.0
margin_right = 141.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 288.0
margin_right = 141.0
margin_bottom = 308.0
text = "Salvar"

[node name="Button2" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 312.0
margin_right = 141.0
margin_bottom = 332.0
text = "Load"

[node name="TextureButton" type="TextureButton" parent="Panel"]
anchor_left = 0.942
anchor_right = 1.0
anchor_bottom = 0.098
margin_left = 0.391907
margin_bottom = 0.199993
hint_tooltip = "Voltar para o menu

Atalho: Esc"
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.5
margin_top = -238.0
margin_right = 380.5
margin_bottom = 238.0
window_title = "Open a File"
dialog_text = "Selecione o perfil que voce deseja caregar"
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer2/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer2/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Panel/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
